--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt-ts": "^7.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.1",
     "zod": "^4.0.15"
