--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test-controller": "node --test --no-warnings --loader ts-node/esm src/controller/index.test.ts"
   },
   "dependencies": {
-    "@faker-js/faker": "^9.9.0",
-    "@types/cors": "^2.8.19",
-    "@types/jsonwebtoken": "^9.0.10",
+   
     "bcrypt-ts": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -27,8 +26,13 @@
     "@types/lodash": "^4.17.20",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.12",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+     "@faker-js/faker": "^9.9.0",
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10"
   }
 }
