--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon",
-    "test-controller": "node  --test --no-warnings --loader ts-node/esm --env-file=envTest.test.env src/controller/index.test.ts"
+    "test-controller": "node  --no-warnings --loader ts-node/esm --env-file=envTest.test.env src/controller/index.test.ts mock",
+    "test-service": "node  --no-warnings --loader ts-node/esm --env-file=envTest.test.env src/service/EmployeesService.test.ts"
   },
   "dependencies": {
    
