--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "test-service": "node  --no-warnings --loader ts-node/esm --env-file=envTest.test.env src/service/EmployeesService.test.ts"
   },
   "dependencies": {
-   
     "bcrypt-ts": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.1",
+    "sqlite3": "^5.1.7",
     "zod": "^4.0.15"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.17.20",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.12",
@@ -31,9 +35,6 @@
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-     "@faker-js/faker": "^9.9.0",
-    "@types/cors": "^2.8.19",
-    "@types/jsonwebtoken": "^9.0.10"
+    "typescript": "^5.8.3"
   }
 }
