--- a/.env
+++ b/.env
@@ -6,9 +6,4 @@ MIN_AGE=20
 MAX_AGE=72
 # DEPARTMENTS="QA","Development","Audit","Accounting","Management"
 JWT_SECRET=secret
-SQL_USER=postgres
-SQL_PORT=5432
-SQL_DB_NAME=postgres
-SQL_HOST=localhost
-SQL_PASSWORD=12345.com
-SQL_CLIENT=pg
+MONGO_URI=mongodb+srv://root:12345.com@cluster0.yg1vywd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
