--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ MIN_AGE=20
 MAX_AGE=72
 # DEPARTMENTS="QA","Development","Audit","Accounting","Management"
 JWT_SECRET=secret
-MONGO_URI=mongodb+srv://root:12345.com@cluster0.yg1vywd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://<username>:<password>@cluster0.yg1vywd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
